# vk-client

./: Cargo.toml
src/: account.rs  client.rs  common.rs  groups.rs  lib.rs  likes.rs  media.rs  oauth.rs  photos.rs  tests.rs  users.rs  wall.rs
src/account/: methods.rs  response.rs  tests.rs
src/attachments/: models.rs
src/client/: response.rs  tests.rs
src/groups/: methods.rs  query.rs  response.rs  tests.rs
src/likes/: methods.rs  query.rs  response.rs  tests.rs
src/photos/: methods.rs  query.rs  response.rs  tests.rs
src/tests/: http_client.rs
src/users/: methods.rs  query.rs  response.rs  tests.rs
src/wall/: methods.rs  query.rs  response.rs  tests.rs  types.rs
