[package]
name = "vk_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = { git = "https://github.com/hyperium/hyper#master", features=["full"] }
reqwest = { version = "0.11.12", features=["json"] }
tokio = { version = "1.21.2", features = ["full"] }
bytes = "1"
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
url = "2.3.1"
